tests/org.eclipse.php.core.tests/workspace/errors/php53/testTypeReferenceError8.pdtt
--TEST--
Bug 559657 - Validator warns about unresolved types when classes and namespaces have same name
--FILE--
<?php
namespace {
final class FFI  {
	/**
	 * @return bool whether a FFI\CData is a null pointer.
	 */
	public static function isNull (FFI\CData &$ptr) {}
}
}

namespace FFI {
final class CData  {
}
}
--EXPECT--
